--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,38 @@
-{% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
-{% block content %}
-       <form method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <div>
-                 <button type="submit" class="btn btn-sm mt-2 me-2 w-25" style="background-color: #5b80b2; color: white">Log in</button>
-{#                 <button class="btn mt-2 btn-sm ms-2 w-25" style="background-color: #5D4954;"><a href="{% url 'signup' %}" class="text-decoration-none text-light">Sign Up</a></button>#}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Alrite</title>
+    <link rel="shortcut icon" href="{% static 'images/alrite_logo.png' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+</head>
+<body>
+
+    <div class='outer-div'>
+        <div class='inner-div'>
+            <div class="text-center">
+               <img src="{% static 'images/alrite_logo.png' %}" alt="" height="90px" width="100px">
             </div>
-        </form>
-{% endblock content %}
+            <div class="login-form shadow">
+               <form method="post">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <div class="text-right">
+                         <button type="submit" class="btn btn-sm mt-3 w-25" style="background-color: #285843; color: white">Login</button>
+{#                         <button class="btn mt-2 btn-sm ms-2 w-25" style="background-color: #5D4954;"><a href="{% url 'signup' %}" class="text-decoration-none text-light">Sign Up</a></button>#}
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+</body>
+</html>
