--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                  <li>
                     <div>
                         <p class="m-0 p-0" style="color: #929a92; font-size: 14px">Healthy Facility</p>
-                         <select name="car" id="car" class="input-data">
+                         <select name="carx" id="carx" class="input-data">
                           <option value="all">All</option>
                           <option value="bugembe">Bugembe HC IV</option>
                           <option value="buwenge">Buwenge HC IV</option>
@@ -65,6 +65,16 @@
                     <div>
                         <p class="m-0 p-0" style="color: #929a92; font-size: 14px">To</p>
                         <input type="date" class="day-2 input-data">
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p class="m-0 p-0" style="color: #929a92; font-size: 14px">Gender</p>
+                         <select name="card" id="card" class="input-data">
+                          <option value="all">All</option>
+                          <option value="male">Male</option>
+                          <option value="female">Female</option>
+                        </select>
                     </div>
                 </li>
                 <li>
@@ -170,11 +180,73 @@
                         </select>
                     </div>
                 </li>
+                <li>
+                    <div>
+                        <p class="m-0 p-0" style="color: #929a92; font-size: 14px">Bronchodilator trial Response</p>
+                       <select name="car682" id="car682" class="input-data">
+                          <option value="none">None</option>
+                          <option value="better">Better</option>
+                          <option value="same">Same/ no change</option>
+                           <option value="worse">Worse</option>
+                        </select>
+                    </div>
+                </li>
+                 <li>
+                    <div>
+                        <p class="m-0 p-0" style="color: #929a92; font-size: 14px">Breathing Rate</p>
+                       <select name="carxx" id="carxx" class="input-data">
+                          <option value="none">None</option>
+                          <option value="normal">Normal Breathing Rate</option>
+                          <option value="fast">Fast Breathing Rate</option>
+                        </select>
+                    </div>
+                </li>
             </ul>
         </div>
 
         <div class="table-div mt-5 my-custom-scrollbar table-wrapper-scroll-y">
-
+            <table class="table-data">
+                <thead>
+                    <tr>
+                        <td>Age(years)</td>
+                        <td>Weight(kg)</td>
+                        <td>MUAC(cm)</td>
+                        <td>Symptoms</td>
+                        <td>Breathing difficulties</td>
+                        <td>Days with breathing difficulties</td>
+                        <td>Temperature(<span>&#176;</span>C)</td>
+                        <td>Oxygen Saturation(%)</td>
+                        <td>Respiratory Rate</td>
+                        <td>Stridor</td>
+                        <td>nasal Flaring</td>
+                        <td>Wheezing</td>
+                        <td>Stethoscope used</td>
+                        <td>Chest indrawing</td>
+                        <td>Duration(min)</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for patient in patients %}
+                        <tr>
+                            <td>{{ patient.age2 }}</td>
+                            <td>{{ patient.weight }}</td>
+                            <td>{{ patient.muac }}</td>
+                            <td>{{ patient.symptoms }}</td>
+                            <td>{{ patient.difficulty_breathing }}</td>
+                            <td>{{ patient.days_with_breathing_difficulties}}</td>
+                            <td>{{ patient.temperature }}</td>
+                            <td>{{ patient.blood_oxygen_saturation }}</td>
+                            <td>{{ patient.respiratory_rate }}</td>
+                            <td>{{ patient.stridor }}</td>
+                            <td>{{ patient.nasal_flaring}}</td>
+                            <td>{{ patient.wheezing }}</td>
+                            <td>{{ patient.stethoscope_used}}</td>
+                            <td>{{ patient.chest_indrawing}}</td>
+                            <td>{{ patient.duration }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
 
     </div>
