--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -204,11 +204,12 @@ main {
 .table-data tbody {
     font-size: 12px;
     height: 20px;
-    border-bottom: #e5e7ea 1px solid;
+
 }
 
 .table-data tbody td{
-    padding: 10px
+    padding: 10px;
+    border-bottom: #e5e7ea 1px solid;
 }
 
 .table-data td {
