--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,10 @@
                         <img src="{% static 'images/alrite_logo.png' %}" alt="" height="45px" width="45px">
                     </li>
                     <li>
-                        <a href="#" class="title">Dashboard</a>
+                        <a href="{% url 'index' %}" class="title">Dashboard</a>
                     </li>
                     <li>
-                        <a href="#" class="title">Clinicians</a>
+                        <a href="{% url 'clinicians' %}" class="title">Clinicians</a>
                     </li>
                 </ul>
             </div>
