--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -14,6 +14,19 @@ div.outer-div {
     align-items: center;
 }
 
+.register {
+    background: #f5f7fb;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.register-div {
+    margin-top: 50px;
+    width: 500px;
+}
+
 div.inner-div {
     width: 500px;
     height: 400px;
@@ -29,11 +42,20 @@ div.inner-div {
     font-size: 14px;
 }
 
-.login-form label {
+.register-form {
+    width: 100%;
+    background: white;
+    border-radius: 10px;
+    border: 2px solid #f5f7fb;
+    padding: 10px;
     font-size: 14px;
 }
 
-.login-form input {
+.login-form label, .register-form label {
+    font-size: 14px;
+}
+
+.login-form input, .register-form input, .register-form select {
     font-size: 14px;
     width: 100%;
     padding: 5px;
@@ -41,6 +63,12 @@ div.inner-div {
     margin-bottom: 10px;
     border-radius: 10px;
     border: 2px solid #f5f7fb;
+}
+
+.create {
+    margin-bottom: 20px;
+    font-family: "Times New Roman";
+    font-weight: bold;
 }
 
 .top-bar {
@@ -109,6 +137,21 @@ main {
 
 .content {
     padding: 20px;
+    height: 100%;
+}
+
+.cli-head {
+    margin-left: 20px;
+    margin-right: 35px;
+}
+
+.pags {
+    text-align: center;
+    font-weight: bold;
+    font-family: "Times New Roman";
+    margin-top: 30px;
+    font-size: 20px;
+    height: 100%;
 }
 
 .top-cards {
@@ -173,6 +216,14 @@ main {
     border: 2px solid #e5e7ea;
 }
 
+.cli-table .table-div {
+    width: 100%;
+    height: 70vh;
+    background: white;
+    border-radius: 10px;
+    border: 2px solid #e5e7ea;
+}
+
 .my-custom-scrollbar {
     height: 100%;
     overflow: auto;
@@ -205,6 +256,10 @@ main {
     font-size: 12px;
     height: 20px;
 
+}
+
+.cli-table .table-data thead td{
+    padding: 10px;
 }
 
 .table-data tbody td{
