--- a/templates/index.html
+++ b/templates/index.html
@@ -12,37 +12,37 @@
                 <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Clinicians</p>
-                        <p class="details m-0">3</p>
+                        <p class="details m-0">{{ clinicians }}</p>
                     </div>
                 </li>
                  <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Forms</p>
-                        <p class="details m-0">67</p>
+                        <p class="details m-0">{{ forms }}</p>
                     </div>
                  </li>
                  <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Complete forms</p>
-                        <p class="details m-0">56</p>
+                        <p class="details m-0">{{ complete }}</p>
                     </div>
                  </li>
                  <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Severe Pneumonia or very severe disease</p>
-                        <p class="details m-0">45</p>
+                        <p class="details m-0">{{ severe }}</p>
                     </div>
                  </li>
                  <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Eligible for Reassessment</p>
-                        <p class="details m-0">10</p>
+                        <p class="details m-0">{{ eligible }}</p>
                     </div>
                  </li>
                  <li>
                     <div class="shadow-sm">
                         <p class="heading m-0">Reassessed</p>
-                        <p class="details m-0">7</p>
+                        <p class="details m-0">{{ reassessed }}</p>
                     </div>
                  </li>
             </ul>
