--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                     <li>
                         <a href="{% url 'clinicians' %}" class="title">Clinicians</a>
                     </li>
+{#                    <li>#}
+{#                        <a href="{% url 'app_usage' %}" class="title">App Usage</a>#}
+{#                    </li>#}
                 </ul>
             </div>
           <div class="top-list">
