--- a/templates/index.html
+++ b/templates/index.html
@@ -258,6 +258,9 @@
                                 </select>
                             </div>
                         </li>
+                        <li>
+                            <a href="{% url 'download' %}" class="data-download">Download Data</a>
+                        </li>
                     </ul>
                 </div>
 
