mac filter changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,8 +136,8 @@
                                 <p class="m-0 p-0" style="color: #929a92; font-size: 14px">Healthy Facility</p>
                                  <select name="carx" id="carx" class="input-data hc">
                                   <option value="all">All</option>
-                                  <option value="Bugembe Health Centre IV">Bugembe HC IV</option>
-                                  <option value="Buwenge Health Centre IV">Buwenge HC IV</option>
+                                  <option value="Bugembe Health Center IV">Bugembe HC IV</option>
+                                  <option value="Buwenge Health Center IV">Buwenge HC IV</option>
                                 </select>
                             </div>
                         </li>
