mac filter changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -288,6 +288,7 @@
                         <thead>
                             <tr>
                                 <td>Age(years)</td>
+                                <td>Gender</td>
                                 <td>Weight(kg)</td>
                                 <td>MUAC(cm)</td>
                                 <td>Symptoms</td>
