--- a/templates/base.html
+++ b/templates/base.html
@@ -1,55 +1,37 @@
 {% load static %}
-{% load crispy_forms_tags %}
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Bootstrap CSS -->
-    <title>Alrite</title>
-    <link rel="shortcut icon" href="{% static 'images/alrite_logo.png' %}" />
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Alrite</title>
+  <link rel="shortcut icon" href="{% static 'images/alrite_logo.png' %}" />
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+</head>
+<body>
+  <header>
+    <nav>
+      <img src="{% static 'images/alrite_logo.png' %}" alt="" height="45px" width="45px">
+      <h1>{% block header %}Alrite{% endblock header %}</h1>
+      <a href="{% url 'dashboard' %}">Dashboard</a>
+      <a href="{% url 'workflows' %}">Workflows</a>
+      <a href="{% url 'clinicians' %}">Clinicians</a>
+      <a href="">Patients</a>
+      <a href="{% url 'logout' %}">Log out</a>
+    </nav>
+  </header>
 
-    </head>
-    <body>
+  <main>
+     {% block content %}
+     {% endblock content %}
+  </main>
 
-        <div class="top-bar shadow-sm">
-
-            <div class="top-list-left">
-                <ul>
-                    <li>
-                        <img src="{% static 'images/alrite_logo.png' %}" alt="" height="45px" width="45px">
-                    </li>
-                    <li>
-                        <a href="{% url 'index' %}" class="title">Dashboard</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'clinicians' %}" class="title">Clinicians</a>
-                    </li>
-{#                    <li>#}
-{#                        <a href="{% url 'app_usage' %}" class="title">App Usage</a>#}
-{#                    </li>#}
-                </ul>
-            </div>
-          <div class="top-list">
-            <ul>
-              <li><a href="{% url 'logout' %}">Log out</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <main>
-           {% block content %}
-           {% endblock content %}
-        </main>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-        <script src="{% static 'js/app.js' %}"></script>
-    </body>
+  <footer>
+    University of Washington
+  </footer>
+  
+  <script src="{% static 'js/base.js'%}"> </script>
+</body>
 </html>
+
